--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
 
         <img src="Bitcoin_QR_Code.png" alt="Bitcoin QR Code" class="qrcode bitcoin-qrcode" />
-        <img src="Monero_QR_Code.png" alt="Monero QR Code" class="qrcode monero-qrcode" />
+        <img src="IMG_7012.jpeg"alt="Monero QR Code" class="qrcode monero-qrcode" />
 
     </div>
 
